Fix wrong variable name

--- a/nuxeo-dynamic-asset-transformation-webui/src/main/resources/web/nuxeo.war/ui/nuxeo-asset-transformation/actions/nuxeo-asset-transformation-video-download-as.html
+++ b/nuxeo-dynamic-asset-transformation-webui/src/main/resources/web/nuxeo.war/ui/nuxeo-asset-transformation/actions/nuxeo-asset-transformation-video-download-as.html
@@ -404,7 +404,7 @@
                     width: this.width,
                     height: this.height,
                     autoCropRatio: cropRatio,
-                    textWatermark: this.textWatermark,
+                    textWatermark: this.watermarkText,
                     watermarkId: this.watermarkDocumentId,
                     watermarkGravity: this.watermarkGravity,
                     format: this.format,
